[tool.poetry]
name = "dehydrated-dns-cloudflare"
version = "0.1.0"
description = ""
authors = ["Brandon Currell"]

[tool.poetry.dependencies]
python = "^3.6"
cloudflare = "^2.8.15"
python-dotenv = "^0.17.1"
tld = "^0.12.5"
dnspython = "^2.1.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
