[tool.poetry]
name = "dehydrated-dns-cloudflare"
version = "0.1.0"
description = ""
authors = ["Brandon Currell"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.6"
cloudflare = "^2.8.15"
python-dotenv = "^0.19.1"
tld = "^0.12.6"
dnspython = "^2.1.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
