[tool.poetry]
name = "dehydrated-dns-cloudflare"
version = "0.1.0"
description = ""
authors = ["Brandon Currell"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
cloudflare = "^3.0.1"
python-dotenv = "^1.0.1"
tld = "^0.13"
dnspython = "^2.6.1"
typer = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
